Сделан слайдер картинок с ползунком

--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
             <span>Видов ножек</span>
           </div>
 
-          <div class="why__we__item backs__item">
+          <div class="why__we__item seats__item">
             <round-slider
               class="round__slider__seats"
               value="00"
@@ -181,17 +181,17 @@
               startAngle="180"
             ></round-slider>
             <div class="why__we__img__wrap">
-              <div class="backs__img__wrap">
-                <img class="why__we__img__active" src="images/спинки/01.png" alt="" data-backs-num="0">
-                <img src="images/спинки/02.png" alt="" data-backs-num="1">
-                <img src="images/спинки/03.png" alt="" data-backs-num="2">
-                <img src="images/спинки/04.png" alt="" data-backs-num="3">
-                <img src="images/спинки/05.png" alt="" data-backs-num="4">
-                <img src="images/спинки/06.png" alt="" data-backs-num="5">
-                <img src="images/спинки/07.png" alt="" data-backs-num="6">
-                <img src="images/спинки/08.png" alt="" data-backs-num="7">
-                <img src="images/спинки/09.png" alt="" data-backs-num="8">
-                <img src="images/спинки/10.png" alt="" data-backs-num="9">
+              <div class="seats__img__wrap">
+                <img class="why__we__img__active" src="images/спинки/01.png" alt="" data-seats-num="0">
+                <img src="images/спинки/02.png" alt="" data-seats-num="1">
+                <img src="images/спинки/03.png" alt="" data-seats-num="2">
+                <img src="images/спинки/04.png" alt="" data-seats-num="3">
+                <img src="images/спинки/05.png" alt="" data-seats-num="4">
+                <img src="images/спинки/06.png" alt="" data-seats-num="5">
+                <img src="images/спинки/07.png" alt="" data-seats-num="6">
+                <img src="images/спинки/08.png" alt="" data-seats-num="7">
+                <img src="images/спинки/09.png" alt="" data-seats-num="8">
+                <img src="images/спинки/10.png" alt="" data-seats-num="9">
               </div>
               <img class="why__we__sub__img" src="images/why__we3__sub.png" alt="">
             </div>
